# libilluminatir

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
example/: example_cobs_build.c  example_parse_minimal.c
include/: illuminatir.h
src/: cobs.c  crc8.c  illuminatir.c  lfsr.c  rand.c
test/: CMakeLists.txt
test/src/: common.h  test_illuminatir_build.c  test_illuminatir_cobs.c  test_illuminatir_lfsr.c  test_illuminatir_parse.c  test_illuminatir_rand.c
